--- a/index.html
+++ b/index.html
@@ -31,13 +31,37 @@
     </header>
     <section id="donate-today" class="donate-today">
         <div class="container">
-            <h2 class="section-title">Donate Today</h2>
-            <p class="section-description">
+            <h2 class="section-title text-center">Donate Today</h2>
+            <p class="section-description text-center">
                 Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli <br> deterruisset. No duo
                 populo
                 animal noluisse,
                 enim
             </p>
+            <div class="donate-system">
+                <div class="donate-fixed-taka">
+                    <div class="donate-amount">
+                        <h3>100tk</h3>
+                    </div>
+                    <div class="donate-amount">
+                        <h3>200tk</h3>
+                    </div>
+                    <div class="donate-amount">
+                        <h3>500tk</h3>
+                    </div>
+                    <div class="donate-amount">
+                        <h3>1000tk</h3>
+                    </div>
+                    <div class="donate-amount">
+                        <h3>5000tk</h3>
+                    </div>
+                </div>
+                <form action="#">
+                    <div class="custom-taka"><input type="number" placeholder="Other Amount (Taka)"></div>
+                    <div class="donate-payment-system"><input class="btn-primary" type="submit" value="Donate Now">
+                    </div>
+                </form>
+            </div>
         </div>
     </section>
 </body>
