Added newsletter section

--- a/index.html
+++ b/index.html
@@ -64,6 +64,88 @@
             </div>
         </div>
     </section>
+    <section id="donate-plan" class="donate-plan">
+        <div class="container">
+            <h2 class="section-title text-center">Our Donate Plan</h2>
+            <p class="section-description text-center">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at
+                eam falli <br>
+                deterruisset. No duo populo animal noluisse,
+                enim</p>
+            <div class="donation-cards">
+                <div class="donation-card">
+                    <img src="./assets/media/icons/food.png" alt="Donation food" class="donation-card-img">
+                    <h2 class="donation-card-title">Food for a family</h2>
+                    <p class="donation-card-des">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
+                        sint. Velit officia consequat duis enim velit mollit.</p>
+                </div>
+                <div class="donation-card">
+                    <img src="./assets/media/icons/shelter.png" alt="Shelter" class="donation-card-img">
+                    <h2 class="donation-card-title">Shelter for a family</h2>
+                    <p class="donation-card-des">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
+                        sint. Velit officia consequat duis enim velit mollit.</p>
+                </div>
+                <div class="donation-card">
+                    <img src="./assets/media/icons/Frame-1.png" alt="Frame-1" class="donation-card-img">
+                    <h2 class="donation-card-title">Education for a child</h2>
+                    <p class="donation-card-des">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
+                        sint. Velit officia consequat duis enim velit mollit.</p>
+                </div>
+            </div>
+            <div class="donation-description">
+                <div class="des1-left">
+                    <h2 class="donation-des-title section-title">Their lives depend on <br> your donation</h2>
+                    <p class="section-description mb-20">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at
+                        eam
+                        falli deterruisset. No duo populo animal noluisse,
+                        enim</p>
+                    <p class="section-description mb-20">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at
+                        eam
+                        falli deterruisset.</p>
+                    <button class="btn-primary">How to Contribute?</button>
+                </div>
+                <div class="des1-right">
+                    <img src="./assets/media/images/mens.png" alt="">
+                </div>
+            </div>
+            <div class="donation-description">
+                <div class="des2-left">
+                    <img src="./assets/media/images/grandmas.png" alt="">
+
+                </div>
+                <div class="des2-right">
+                    <h2 class="donation-des-title section-title">They need us <br> to suvive</h2>
+                    <p class="section-description mb-20">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at
+                        eam
+                        falli deterruisset. No duo populo animal noluisse,
+                        enim</p>
+                    <p class="section-description mb-20">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at
+                        eam
+                        falli deterruisset.</p>
+                    <button class="btn-primary">How to Contribute?</button>
+
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="updates" class="updates">
+        <div class="container">
+            <h2 class="section-title text-center">Get My Updates</h2>
+            <p class="section-description text-center">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at
+                eam falli <br>
+                deterruisset. No duo populo animal noluisse,
+                enim</p>
+            <div class="newsletter-main">
+                <div class="newsletter-container">
+                    <div class="newsletter-form">
+                        <form action="#">
+                            <input type="email" placeholder="Email">
+                            <input type="submit" value="Subscribe">
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
